// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form demo -- form 1`] = `
.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c12 {
  vertical-align: baseline;
}

.c11 {
  margin-right: 8px;
  font-size: 14px;
}

.c9 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c9 .c10 {
  color: #3555f6;
}

.c13 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c7 {
  position: relative;
  margin-bottom: -8px;
}

.c7 .c8,
.c7 .style__RadioTagWrap-sc-25j3mq-3 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c8:last-child,
.c7 .style__RadioTagWrap-sc-25j3mq-3:last-child {
  margin-right: 0;
}

.c7 .c30 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c7 .c30:last-child {
  margin-right: 0;
}

.c7 .c31+.c31 {
  margin-left: -1px;
}

.c7 .c29 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c7 .c29:first-child {
  border-radius: 2px 0 0 2px;
}

.c7 .c29:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c17 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c19 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c22 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c24 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c15 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c15:hover {
  border-color: #4683e6;
}

.c15 .c21 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c15 .c23 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c15 .c16 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c15 .c18,
.c15 .c20 {
  line-height: 16px;
}

.c15 .c18 {
  padding-right: 20px;
}

.c15 .c20 {
  padding-left: 20px;
}

.c15 .c18 {
  display: none;
}

.c14 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #0a1633;
}

.c14 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c14 input {
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 28px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c14 input:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c14 input:focus {
  border-color: #4683e6;
  background-color: #f6f6fb;
}

.c14 input:disabled,
.c14 input[disabled] {
  box-shadow: none;
}

.c14 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c14 input::-moz-placeholder {
  color: #abb4c3;
}

.c14 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c14 input::placeholder {
  color: #abb4c3;
}

.c14 .c32 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c27 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  padding-right: 28px;
  box-sizing: border-box;
}

.c28 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c25 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
  background-color: #fff;
}

.c25 .c26 {
  height: 28px;
  line-height: 28px;
  border: 1px none #c3cad9;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c25 .c26:hover {
  border-color: #4683e6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="c10 c11 uc-fe-icon icon__cbox-ed c12"
              type="cbox-ed"
            />
            md
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            lg
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <form
      class="uc-fe-form c0"
    >
      <div
        class="c1 uc-fe-form-item uc-fe-row c2"
      >
        <div
          class="uc-fe-form-label c3 c4 uc-fe-col c5"
          span="3"
        >
          Input
        </div>
        <div
          class="uc-fe-form-controller c4 uc-fe-col c6"
          span="9"
        >
          <span
            class="uc-fe-input c14"
          >
            <input />
          </span>
        </div>
      </div>
      <div
        class="c1 uc-fe-form-item uc-fe-row c2"
      >
        <div
          class="uc-fe-form-label c3 c4 uc-fe-col c5"
          span="3"
        >
          Switch
        </div>
        <div
          class="uc-fe-form-controller c4 uc-fe-col c6"
          span="9"
        >
          <div
            class="c15"
          >
            <div
              class="c16 c17"
            >
              <span
                class="c18 c19"
              >
                ON
              </span>
              <span
                class="c20 c19"
              >
                OFF
              </span>
              <span
                class="c21 c22"
              >
                <span
                  class="c23 c24"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c1 uc-fe-form-item uc-fe-row c2"
      >
        <div
          class="uc-fe-form-label c3 c4 uc-fe-col c5"
          span="3"
        >
          上传文件
        </div>
        <div
          class="uc-fe-form-controller c4 uc-fe-col c6"
          span="9"
        >
          <div
            class="c25"
          >
            <div>
              <div
                class="c26 c27"
              >
                <div>
                  请选择
                </div>
                <i
                  class="c28 uc-fe-icon icon__down c12"
                  type="down"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Form demo -- group 1`] = `
.c7 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c4 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c4:before,
.c4:after {
  content: ' ';
  display: table;
}

.c4:after {
  clear: both;
}

.c4 .c6 {
  padding-left: 8px;
  padding-right: 8px;
}

.c5 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c1 + .c1 {
  margin-top: 24px;
}

.c2 {
  font-weight: bold;
  line-height: 22px;
  padding: 12px 0;
  margin-bottom: 24px;
  font-size: 14px;
  border-bottom: 1px solid #c3cad9;
  color: #0a1633;
}

.c0 .c3 {
  margin-bottom: 16px;
}

.c0 .c3:last-child {
  margin-bottom: 0;
}

.c30 {
  vertical-align: baseline;
}

.c10 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #fff;
  border-color: #4683e6;
  border: none;
  background: linear-gradient(135deg,#5c8af7,#385ef5);
  box-shadow: 0 1px 5px 0 rgba(21,56,195,.12),0 2px 2px 0 rgba(8,155,140,0.24),0 3px 1px -3px rgba(58,96,245,.34);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c10:hover {
  color: #fff;
  border-color: #3664c8;
  background: linear-gradient(135deg,#5e95fb,#3a72f9);
  box-shadow: 0 1px 10px 0 rgba(21,56,195,.12),0 2px 4px -1px rgba(21,56,195,.2),0 4px 5px 0 rgba(21,56,195,.14);
}

.c18 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c20 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c23 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c25 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c16 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c16:hover {
  border-color: #4683e6;
}

.c16 .c22 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c16 .c24 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c16 .c17 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c16 .c19,
.c16 .c21 {
  line-height: 16px;
}

.c16 .c19 {
  padding-right: 20px;
}

.c16 .c21 {
  padding-left: 20px;
}

.c16 .c19 {
  display: none;
}

.c36 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #0a1633;
}

.c36 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c36 input {
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 28px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c36 input:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c36 input:focus {
  border-color: #4683e6;
  background-color: #f6f6fb;
}

.c36 input:disabled,
.c36 input[disabled] {
  box-shadow: none;
}

.c36 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c36 input::-moz-placeholder {
  color: #abb4c3;
}

.c36 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c36 input::placeholder {
  color: #abb4c3;
}

.c36 .c37 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c33 {
  position: relative;
}

.c35 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c29 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  box-shadow: 0 2px 4px 0 #e4e5f2,0 1px 1px 0 rgba(162,166,191,0.32),0 1px 0 0 rgba(223,224,241,0.7);
  display: inline-block;
  vertical-align: middle;
  border-color: #c3cad9;
}

.c27 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  border: 1px solid #dfe0f1;
  padding-right: 22px;
  border-right-width: 0;
}

.c27 .c34 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c27 .c34::-webkit-input-placeholder {
  color: #abb4c3;
}

.c27 .c34::-moz-placeholder {
  color: #abb4c3;
}

.c27 .c34:-ms-input-placeholder {
  color: #abb4c3;
}

.c27 .c34::placeholder {
  color: #abb4c3;
}

.c27:hover {
  border-color: #c3cad9;
}

.c27 .c32 {
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  background: #fafafc;
}

.c27 .c32:hover {
  background: #f6f6fb;
}

.c27 .c34 {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.c27 .c28,
.c27 .c31 {
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c27 .c28:hover,
.c27 .c31:hover {
  color: #3555f6;
}

.c27 .c28 {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.c27 .c31 {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #e8e9f5;
}

.c15 {
  display: table-cell;
  vertical-align: middle;
}

.c14 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c14 .c38 {
  color: #6b798e;
}

.c9 {
  display: inline-block;
  cursor: pointer;
}

.c11 {
  margin-left: 5px;
}

.c12 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c13 {
  border: none;
}

.c26 .uc-fe-slider {
  position: relative;
  width: 300px;
  border-radius: 2px;
  touch-action: none;
  margin-right: 12px;
  background: #fff;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
}

.c26 .uc-fe-slider-rail {
  box-sizing: border-box;
  position: absolute;
  width: 100%;
  border-radius: 2px;
  background: #e9e9e9;
  border: 1px solid #c3cad9;
  height: 28px;
}

.c26 .uc-fe-slider-track {
  box-sizing: border-box;
  position: absolute;
  left: 0;
  border: 1px solid #4683e6;
  border-radius: 2px;
  background: #f4f9ff;
  height: 28px;
}

.c26 .uc-fe-slider-tooltip {
  line-height: normal;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c26 .uc-fe-slider-handle {
  box-sizing: border-box;
  position: absolute;
  margin-left: -10px;
  margin-top: -3px;
  width: 20px;
  cursor: pointer;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  text-align: center;
  border: 1px solid #c3cad9;
  background: #fff;
  touch-action: pan-x;
  z-index: 9;
  height: 34px;
  line-height: 36px;
}

.c26 .uc-fe-slider-handle::before,
.c26 .uc-fe-slider-handle::after {
  content: '';
  display: inline-block;
  width: 1px;
  height: 16px;
  background: #dbdcdf;
  margin-top: 8px;
}

.c26 .uc-fe-slider-handle::after {
  margin-left: 4px;
}

.c26 .uc-fe-slider-handle:hover {
  border-color: rgb(107,156,235);
}

.c26 .uc-fe-slider-handle:active {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(107,156,235);
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
}

.c26 .uc-fe-slider-handle:focus {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(163,193,243);
  outline: none;
}

.c26 .uc-fe-slider-mark {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  font-size: 12px;
}

.c26 .uc-fe-slider-mark-text {
  position: absolute;
  display: inline-block;
  vertical-align: middle;
  text-align: right;
  cursor: pointer;
  color: #6b798e;
  border-right: 1px solid #c3cad9;
  padding: 0 8px;
  box-sizing: border-box;
  pointer-events: none;
  line-height: 28px;
}

.c26 .uc-fe-slider-mark-text-active {
  color: #3555f6;
  border-right-color: #4683e6;
}

.c26 .uc-fe-slider-step {
  position: absolute;
  width: 100%;
  background: transparent;
  height: 28px;
}

.c26 .uc-fe-slider-dot {
  display: none;
}

<form
  class="uc-fe-form c0"
>
  <div
    class="uc-fe-form-group c1"
  >
    <div
      class="uc-fe-form-group-title c2"
    >
      Group 1
    </div>
    <div>
      <div
        class="c3 uc-fe-form-item uc-fe-row c4"
      >
        <div
          class="uc-fe-form-label c5 c6 uc-fe-col c7"
          span="3"
        >
          upload
        </div>
        <div
          class="uc-fe-form-controller c6 uc-fe-col c8"
          span="9"
        >
          <div>
            <div
              class="c9"
            >
              <input
                hidden=""
                type="file"
              />
              <button
                class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c10"
                type="button"
              >
                请选择文件
              </button>
              <span
                class="c11"
              >
                请选择符合规则的文件
              </span>
            </div>
            <div
              class="c12"
            >
              <div
                class="c13 c14"
              >
                <div
                  class="c15"
                >
                  你还未上传任何内容
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c3 uc-fe-form-item uc-fe-row c4"
      >
        <div
          class="uc-fe-form-label c5 c6 uc-fe-col c7"
          span="3"
        >
          switch
        </div>
        <div
          class="uc-fe-form-controller c6 uc-fe-col c8"
          span="9"
        >
          <div
            class="c16"
          >
            <div
              class="c17 c18"
            >
              <span
                class="c19 c20"
              >
                ON
              </span>
              <span
                class="c21 c20"
              >
                OFF
              </span>
              <span
                class="c22 c23"
              >
                <span
                  class="c24 c25"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="uc-fe-form-group c1"
  >
    <div
      class="uc-fe-form-group-title c2"
    >
      Group 2
    </div>
    <div>
      <div
        class="c3 uc-fe-form-item uc-fe-row c4"
      >
        <div
          class="uc-fe-form-label c5 c6 uc-fe-col c7"
          span="3"
        >
          slider
        </div>
        <div
          class="uc-fe-form-controller c6 uc-fe-col c8"
          span="9"
        >
          <div
            class="c26"
          >
            <div
              class="uc-fe-slider"
            >
              <div
                class="uc-fe-slider-rail"
              />
              <div
                class="uc-fe-slider-track"
                style="left:0%;width:10%;"
              />
              <div
                class="uc-fe-slider-step"
              />
              <div
                aria-disabled="false"
                aria-valuemax="300"
                aria-valuemin="0"
                aria-valuenow="10"
                class="uc-fe-slider-handle"
                role="slider"
                style="left:10%;"
                tabindex="0"
              />
              <div
                class="uc-fe-slider-mark"
              />
            </div>
            <div
              class="uc-fe-numberinput uc-fe-numberinput-styletype-default c27"
            >
              <div>
                <span
                  class="c28 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c29"
                  unselectable="unselectable"
                >
                  <i
                    class="uc-fe-icon icon__caret-up c30"
                    type="caret-up"
                  />
                </span>
                <span
                  class="c31 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c29"
                  unselectable="unselectable"
                >
                  <i
                    class="uc-fe-icon icon__caret-down c30"
                    type="caret-down"
                  />
                </span>
              </div>
              <div
                class="c32 uc-fe-numberinput-input-wrap c33"
              >
                <input
                  autocomplete="off"
                  class="c34 uc-fe-numberinput-input c35"
                  max="100"
                  min="0"
                  step="1"
                  value="10"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c3 uc-fe-form-item uc-fe-row c4"
      >
        <div
          class="uc-fe-form-label c5 c6 uc-fe-col c7"
          span="3"
        >
          input
        </div>
        <div
          class="uc-fe-form-controller c6 uc-fe-col c8"
          span="9"
        >
          <span
            class="uc-fe-input c36"
          >
            <input />
          </span>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Form demo -- item 1`] = `
.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c14 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c8 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #fff;
  border-color: #4683e6;
  border: none;
  background: linear-gradient(135deg,#5c8af7,#385ef5);
  box-shadow: 0 1px 5px 0 rgba(21,56,195,.12),0 2px 2px 0 rgba(8,155,140,0.24),0 3px 1px -3px rgba(58,96,245,.34);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c8:hover {
  color: #fff;
  border-color: #3664c8;
  background: linear-gradient(135deg,#5e95fb,#3a72f9);
  box-shadow: 0 1px 10px 0 rgba(21,56,195,.12),0 2px 4px -1px rgba(21,56,195,.2),0 4px 5px 0 rgba(21,56,195,.14);
}

.c13 {
  display: table-cell;
  vertical-align: middle;
}

.c12 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c12 .c15 {
  color: #6b798e;
}

.c7 {
  display: inline-block;
  cursor: pointer;
}

.c9 {
  margin-left: 5px;
}

.c10 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c11 {
  border: none;
}

<form
  class="uc-fe-form c0"
>
  <div
    class="c1 uc-fe-form-item uc-fe-row c2"
  >
    <div
      class="uc-fe-form-label c3 c4 uc-fe-col c5"
      span="3"
    >
      横向布局
    </div>
    <div
      class="uc-fe-form-controller c4 uc-fe-col c6"
      span="9"
    >
      <div
        style="margin-bottom:5px;"
      >
        <div
          class="c7"
        >
          <input
            hidden=""
            type="file"
          />
          <button
            class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c8"
            type="button"
          >
            请选择文件
          </button>
          <span
            class="c9"
          >
            请选择符合规则的文件
          </span>
        </div>
        <div
          class="c10"
        >
          <div
            class="c11 c12"
          >
            <div
              class="c13"
            >
              你还未上传任何内容
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="c7"
        >
          <input
            hidden=""
            type="file"
          />
          <button
            class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c8"
            type="button"
          >
            请选择文件
          </button>
          <span
            class="c9"
          >
            请选择符合规则的文件
          </span>
        </div>
        <div
          class="c10"
        >
          <div
            class="c11 c12"
          >
            <div
              class="c13"
            >
              你还未上传任何内容
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c1 uc-fe-form-item uc-fe-row c2"
  >
    <div
      class="uc-fe-form-label c3 c4 uc-fe-col c14"
    >
      竖向布局
    </div>
    <div
      class="uc-fe-form-controller c4 uc-fe-col c14"
    >
      <div
        style="margin-bottom:5px;"
      >
        <div
          class="c7"
        >
          <input
            hidden=""
            type="file"
          />
          <button
            class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c8"
            type="button"
          >
            请选择文件
          </button>
          <span
            class="c9"
          >
            请选择符合规则的文件
          </span>
        </div>
        <div
          class="c10"
        >
          <div
            class="c11 c12"
          >
            <div
              class="c13"
            >
              你还未上传任何内容
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="c7"
        >
          <input
            hidden=""
            type="file"
          />
          <button
            class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c8"
            type="button"
          >
            请选择文件
          </button>
          <span
            class="c9"
          >
            请选择符合规则的文件
          </span>
        </div>
        <div
          class="c10"
        >
          <div
            class="c11 c12"
          >
            <div
              class="c13"
            >
              你还未上传任何内容
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;
